discussion/kv_engine/172721/172721_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50841: Generate stat definitions from json

Replaces stats.def.h with stat_definitions.json.

Macro-driven stat definitions could be a little opaque when adding or
changing stats, and would become unwieldy if stat descriptions were
added.

To support future improvements, and increase readability, re-define all
stats in json.

This is a lot more verbose, but easier to understand at a glance.

Change-Id: Iaf2f947cc2785cec26768e0896978440d5d5a4fa

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-28 10:16:46.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-28 11:01:19.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16206/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/definitions.h:125:10: error: "generated_stats.h" file not found [clang-diagnostic-error]
#include "generated_stats.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16206/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/definitions.h:125:10:
error: "generated_stats.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16206/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44707/ : FAILURE

Link error: error LNK2019: unresolved external symbol getopt referenced in function main ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44707/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37617/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15136/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5863/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17978/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18301/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5922/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19009/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17054/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
